--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ go:
 - '1.3'
 - '1.6'
 - '1.8'
+script:
+        - go env
+        - go get -v ./...
+        - go build
 after_success:
-        - curl -H "Content-Type: application/json" --data '{"build": true}' -X POST $DOCKER_TRIGGER
+        - bash .deploy.sh
