Attempt curl in CI without script

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ go:
 jobs:
         include:
                 - stage: deploy
-                  script: bash .deploy.sh
+                  script: curl -H "Content-Type: application/json" --data '{"build": true}' -X POST ${DOCKER_TRIGGER}
