--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: go
 go:
         - '1.6'
         - '1.8'
+script: 
+        - $GOPATH/bin/curl-a-joke &
+        - sleep 5
+        - curl localhost:8080
 jobs:
         include:
                 - stage: deploy
