--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,4 +1,4 @@
 steps:
-  - command: "docker build -t dvdmuckle/curl-a-joke:armhf ."
+  - command: "docker build -t dvdmuckle/curl-a-joke:testing-armhf ."
 
-  - command: "docker push dvdmuckle/curl-a-joke:armhf"
+  - command: "docker push dvdmuckle/curl-a-joke:testing-armhf"
