--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,4 +1,8 @@
 steps:
+  - command: "docker pull golang"
   - command: "docker build -t dvdmuckle/curl-a-joke:armhf --no-cache ."
-
+  - command: "docker tag dvdmuckle/curl-a-joke:armhf dvdmuckle/curl-a-joke:armhf-$(echo $BUILDKITE_COMMIT | cut -c1-7)"
   - command: "docker push dvdmuckle/curl-a-joke:armhf"
+  - command: "docker push dvdmuckle/curl-a-joke:armhf-$(echo $BUILDKITE_COMMIT | cut -c1-7)"
+  - command: "kubectl set image deployment/curl-a-joke curl-a-joke=dvdmuckle/curl-a-joke:armhf-$(echo $BUILDKITE_COMMIT | cut -c1-7)"
+
