--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,5 +1,5 @@
 steps:
-  - command: "docker pull golang"
+  - command: "docker pull golang && docker pull ubuntu:xenial"
   - command: "docker build -t dvdmuckle/curl-a-joke:testing-armhf --no-cache ."
   - command: "docker tag dvdmuckle/curl-a-joke:testing-armhf dvdmuckle/curl-a-joke:testing-armhf-$(echo $BUILDKITE_COMMIT | cut -c1-7)"
   - command: "docker push dvdmuckle/curl-a-joke:testing-armhf"
