--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,7 @@
 steps:
   - command: "docker pull golang && docker pull ubuntu:xenial"
-  - command: "docker build -t dvdmuckle/curl-a-joke:testing --no-cache ."
-  - command: "docker tag dvdmuckle/curl-a-joke:testing dvdmuckle/curl-a-joke:testing-$(echo $BUILDKITE_COMMIT | cut -c1-7)"
-  - command: "docker push dvdmuckle/curl-a-joke:testing"
-  - command: "docker push dvdmuckle/curl-a-joke:testing-$(echo $BUILDKITE_COMMIT | cut -c1-7)"
-  - command: "kubectl set -n testing image deployment/curl-a-joke-testing curl-a-joke-testing=dvdmuckle/curl-a-joke:testing-$(echo $BUILDKITE_COMMIT | cut -c1-7)"
+  - command: "docker build -t dvdmuckle/curl-a-joke:testing-armhf --no-cache ."
+  - command: "docker tag dvdmuckle/curl-a-joke:testing-armhf dvdmuckle/curl-a-joke:testing-armhf-$(echo $BUILDKITE_COMMIT | cut -c1-7)"
+  - command: "docker push dvdmuckle/curl-a-joke:testing-armhf"
+  - command: "docker push dvdmuckle/curl-a-joke:testing-armhf-$(echo $BUILDKITE_COMMIT | cut -c1-7)"
+  - command: "kubectl set -n testing image deployment/curl-a-joke-testing curl-a-joke-testing=dvdmuckle/curl-a-joke:testing-armhf-$(echo $BUILDKITE_COMMIT | cut -c1-7)"
