Change docker-compose to build image instead of pull from registry
This is done for testing purposes, less so deployment purposes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 
 services:
-  web:
+  curl-a-joke:
     ports:
             - "8080:8080"
-    image: dvdmuckle/curl-a-joke
+    build:
+      context: .
